Fixes a lot of tests